refactor: EntityMetaData getFields() 메서드 내부 로직 수정
기존 getFields() 메서드에서 사용한 toList() 는 jdk11 에선 사용할 수 없기 때문에
collect(Collectors.toList()) 로 변경하였다.